# Turbo.cpp

./: .gitignore  CMakeLists.txt  README.md  benchmark_gemm  dummy.gguf  dummy_model.gguf  dump_gguf.py  patch_ffn.sh  perf.data  perf.data.old  print_shapes.cpp  tensors.txt  turbo
benchmarks/: benchmark_gemm.cpp  benchmark_quant.cpp
examples/: create_dummy_gguf.py  dump_special.cpp  print_meta.cpp  print_tokens  print_tokens.cpp  run_generation.cpp  run_loader.cpp  test_hf.py  test_vocab  test_vocab.cpp  vocab.txt
include/: tensor.hpp
include/turbo/core/: generate.hpp  kv_cache.hpp  sampler.hpp  tokenizer.hpp
include/turbo/loader/: gguf_common.hpp  gguf_loader.hpp  mmap_file.hpp
include/turbo/model/: minigpt.hpp
include/turbo/nn/: attention.hpp  embedding.hpp  ffn.hpp  layer.hpp  linear.hpp  rmsnorm.hpp  rope.hpp  softmax.hpp  swiglu.hpp  transformer_block.hpp
include/turbo/tensor/: quant_types.hpp  tensor.hpp
src/: main.cpp  tensor.cpp  turbo  turbo.cpp
src/core/: generate.cpp  kv_cache.cpp  sampler.cpp  tokenizer.cpp
src/loader/: gguf_loader.cpp
src/model/: minigpt.cpp
src/nn/: attention.cpp  embedding.cpp  ffn.cpp  linear.cpp  rmsnorm.cpp  rope.cpp  softmax.cpp  swiglu.cpp  transforrmer_block.cpp
src/tensor/: quant_math.hpp  tensor.cpp
tests/: CMakeLists.txt  test_nn.cpp  test_quant.cpp  test_rope.cpp  test_tensor.cpp  test_tokenizer.cpp
